# keycode

./: Cargo.toml  README.md  build.rs  flake.nix
keycode/: Cargo.toml  README.md  build.rs
keycode/src/: lib.rs
keycode/tests/: test.rs
keycode_macro/: Cargo.toml  README.md  build.rs  keycode_converter_data.inc
keycode_macro/src/: generate.rs  key_map.rs  lib.rs
keycode_macro/src/parse/: mod.rs  parse_keycode_list.rs
keycode_macro/tests/: test.rs
src/: lib.rs
tests/: test.rs
