[package]
authors = ["Dylan Frankland <github@frankland.io>"]
edition = "2018"
name = "keycode"
version = "0.1.0"
license = "MIT"
description = "A Rust crate for translating keycodes based on Chrome's mapping of keys."
homepage = "https://github.com/dfrankland/keycode"
repository = "https://github.com/dfrankland/keycode"
keywords = ["keyboard", "key", "usb", "hid", "ps2"]
categories = ["os", "hardware-support"]
build = "build.rs"
