[package]
authors = ["Dylan Frankland <github@frankland.io>"]
build = "build.rs"
categories = ["os", "hardware-support"]
description = "A Rust crate for translating keycodes based on Chrome's mapping of keys."
edition = "2018"
homepage = "https://github.com/dfrankland/keycode"
keywords = ["keyboard", "key", "usb", "hid", "ps2"]
license = "MIT"
name = "keycode"
repository = "https://github.com/dfrankland/keycode"
version = "0.1.0"
[build-dependencies]
regex = "1.1.0"

[dependencies]
bitflags = "1.0.4"
