[package]
name = "keycode"
description = "A Rust crate for translating keycodes based on Chrome's mapping of keys."
version = "0.2.2"
categories = ["os", "hardware-support", "embedded", "no-std"]
keywords = ["keyboard", "key", "usb", "hid", "ps2"]
authors = ["Dylan Frankland <github@frankland.io>"]
build = "build.rs"
edition = "2018"
homepage = "https://github.com/dfrankland/keycode"
repository = "https://github.com/dfrankland/keycode"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/keycode"

[build-dependencies]
quote = "0.6.11"
regex = "1.1.0"

[dependencies]
arraydeque = { version = "0.4.5", default-features = false }
arrayvec = { version = "0.4.10", default-features = false }
bitflags = "1.0.4"
