[package]
name = "keycode_macro"
description = "A Rust crate for parsing Chrome's mapping of keys. Used in the `keycode` crate."
version = "0.4.0"
authors = ["Dylan Frankland <dfrankland@users.noreply.github.com>"]
edition = "2018"
homepage = "https://github.com/dfrankland/keycode"
repository = "https://github.com/dfrankland/keycode"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/keycode_macro"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
proc-macro2 = "1.0.6"
heck = "0.5.0"
anyhow = "1.0.26"

[dev-dependencies]
bitflags = "2.9.0"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("serde"))'] }
